--- a/src/app/country/components/country-list/country-list.html
+++ b/src/app/country/components/country-list/country-list.html
@@ -22,7 +22,7 @@
         <td>{{ country.capital }}</td>
         <td>
           <span class="badge badge-secondary">
-            {{ country.population }}
+            {{ country.population | number }}
           </span>
         </td>
         <td>
